Добавит секцию courses

--- a/css/style.css
+++ b/css/style.css
@@ -304,6 +304,44 @@ button {
   padding-bottom: 40px;
 }
 
+.courses__item-img {
+  position: relative;
+  color: #ffffff;
+  font-size: 11px;
+  font-family: Yeseva One;
+  margin-bottom: 28px;
+}
+
+.courses__title {
+  padding: 15px 15px 15px 10px;
+  left: 3.5%;
+  top: 44%;
+}
+
+.courses__time {
+  padding: 7px 16px 7px 10px;
+  left: 3.5%;
+  top: 60%;
+}
+
+.courses__time span {
+  font-size: 10px;
+  font-family: Comfortaa;
+}
+
+.courses__price {
+  padding: 19px 19px 18px 10px;
+  bottom: -6px;
+  right: -8px;
+}
+
+.courses__title,
+.courses__time,
+.courses__price {
+  background-color: #bea495;
+  position: absolute;
+}
+
 .footer {
   padding-top: 40px;
   padding-bottom: 35px;
@@ -334,6 +372,10 @@ button {
   }
 
   .steps__item {
+    gap: 0 30px;
+  }
+
+  .courses__content {
     gap: 0 30px;
   }
 }
@@ -433,6 +475,39 @@ button {
   }
 }
 
+@media (max-width: 830px) {
+  .course__item-img {
+    width: 195px;
+  }
+
+  .courses__item-img {
+    font-size: 10px;
+    margin-bottom: 20px;
+  }
+
+  .courses__title {
+    padding: 10px 6px 10px 7px;
+    left: 16%;
+    top: 44%;
+  }
+
+  .courses__time {
+    padding: 6px 6px 6px 6px;
+    left: 16%;
+    top: 60%;
+  }
+
+  .courses__time span {
+    font-size: 10px;
+  }
+
+  .courses__price {
+    padding: 15px 15px 14px 10px;
+    bottom: 3px;
+    right: 40px;
+  }
+}
+
 @media (max-width: 768px) {
   body {
     font-size: 10px;
@@ -526,6 +601,33 @@ button {
   .goods__item-text {
     font-size: 8px;
     margin-bottom: 20px;
+  }
+
+  .courses__item-img {
+    font-size: 10px;
+    margin-bottom: 20px;
+  }
+
+  .courses__title {
+    padding: 10px 6px 10px 7px;
+    left: 2%;
+    top: 44%;
+  }
+
+  .courses__time {
+    padding: 6px 6px 6px 6px;
+    left: 2%;
+    top: 60%;
+  }
+
+  .courses__time span {
+    font-size: 10px;
+  }
+
+  .courses__price {
+    padding: 15px 15px 14px 10px;
+    bottom: 0px;
+    right: -4px;
   }
 }
 
@@ -673,6 +775,12 @@ button {
   }
 }
 
+@media (max-width: 430px) {
+  .courses__content {
+    grid-template-columns: auto;
+  }
+}
+
 @media (max-width: 404px) {
   .steps__list {
     gap: 20px 25px;
@@ -788,5 +896,40 @@ button {
   .button {
     font-size: 8px;
     padding: 11px 22px;
+  }
+  .course__item-img {
+    width: 255px;
+  }
+
+  .courses__item {
+    width: 255px;
+  }
+
+  .courses__item-img {
+    font-size: 11px;
+    margin-bottom: 28px;
+  }
+
+  .courses__title {
+    padding: 15px 15px 15px 10px;
+    left: -0.5%;
+    top: 44%;
+  }
+
+  .courses__time {
+    padding: 7px 16px 7px 10px;
+    left: -0.5%;
+    top: 60%;
+  }
+
+  .courses__time span {
+    font-size: 10px;
+    font-family: Comfortaa;
+  }
+
+  .courses__price {
+    padding: 19px 19px 18px 10px;
+    bottom: -6px;
+    right: -8px;
   }
 }
