--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,7 @@ button {
 
 .section--decor {
   position: relative;
+  padding-bottom: 92px;
 }
 
 .section--decor::before {
@@ -232,10 +233,6 @@ button {
 
 .goods__content {
   gap: 50px 90px;
-}
-
-.section__content-descr {
-  padding-bottom: 92px;
 }
 
 .goods__item {
@@ -379,6 +376,214 @@ button {
   font-size: 10px;
 }
 
+.feedback__descr {
+  margin-right: 20px;
+}
+
+.feedback__content {
+  padding-bottom: 110px;
+}
+
+.feedback__content .swiper-pagination {
+  bottom: 56px;
+}
+
+.swiper-pagination-bullet {
+  width: 53px;
+  height: 4px;
+  background-color: #bea495;
+  border-radius: 0;
+  opacity: 1;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: #7b6152;
+}
+
+.feedback__slider {
+  width: 760px;
+  overflow: hidden;
+}
+
+.feedback__item {
+  display: grid;
+  grid-template-columns: auto auto;
+  gap: 0 16px;
+  align-items: center;
+}
+
+.feedback__item-video {
+  position: relative;
+}
+
+.feedback__item-videobtn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: transparent;
+}
+
+.feedback__item-content {
+  padding-bottom: 70px;
+}
+
+.feedback__item-sociallink {
+  margin-bottom: 12px;
+}
+.feedback__item-name {
+  margin-bottom: 15px;
+  font-family: Yeseva One;
+  font-size: 16px;
+}
+.feedback__item-text {
+  margin-bottom: 15px;
+}
+
+.feedback__item-btn {
+  position: absolute;
+  bottom: 10px;
+  right: 0;
+}
+
+.certificates__slider {
+  width: 1135px;
+  overflow: hidden;
+}
+
+.certificates__descr {
+  margin-right: 20px;
+  padding-bottom: 114px;
+}
+
+.certificates__content .swiper-pagination {
+  bottom: 60px;
+  text-align: left;
+}
+
+.accordion__item {
+  background-color: #fafafa;
+  margin-bottom: 10px;
+}
+
+.accordion__title {
+  font-family: Yeseva One;
+  font-size: 16px;
+  display: block;
+  background-color: transparent;
+  padding: 16px 50px 16px 13px;
+  text-align: left;
+  position: relative;
+  width: 100%;
+}
+
+.accordion__title::after {
+  content: "";
+  background-image: url(../images/arrow.svg);
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  right: 26px;
+  top: 17px;
+}
+
+.accordion__title.accordion__title--active::after {
+  transform: rotate(180deg);
+}
+
+.accordion__text ol {
+  padding: 20px 40px;
+}
+
+.accordion__text {
+  opacity: 0;
+  max-height: 0;
+  transition: opacity 0.3s, max-height 0.3s;
+}
+
+.accordion__text.accordion__text--visible {
+  opacity: 1;
+}
+
+.promo {
+  padding: 140px 0;
+  background-image: url(../images/promo-bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+
+.promo__inner {
+  display: flex;
+  align-items: center;
+}
+
+.promo__text {
+  padding-left: 56px;
+  max-width: 860px;
+  margin-right: 110px;
+  color: #fff;
+  font-family: Yeseva One;
+  font-size: 40px;
+}
+
+.promo__link {
+  color: #272727;
+  background-color: #ffbd59;
+  display: inline-block;
+  padding: 14px 25px 12px;
+}
+
+.contacts {
+  padding: 150px 0 50px;
+}
+
+.contacts__inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.form {
+  width: 664px;
+  padding: 75px 42px 67px;
+  background-color: #ffffff;
+}
+
+.form__title {
+  font-family: Yeseva One;
+  font-size: 40px;
+  margin-bottom: 50px;
+}
+
+.form__input {
+  background-color: #ffffff;
+  border: none;
+  border-bottom: 1px solid #000000;
+  width: 100%;
+  display: block;
+  padding: 10px 7px;
+  margin-bottom: 15px;
+  font-family: Comfortaa;
+  color: #000000;
+}
+
+.form__input::placeholder {
+  color: #b3b3b3;
+  font-family: Comfortaa;
+  font-size: 14px;
+}
+
+.form__btn {
+  margin-top: 35px;
+  padding: 17px 34px;
+  color: #272727;
+  font-family: Comfortaa;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 600;
+  background-color: #ffbd59;
+}
 .footer {
   padding-top: 40px;
   padding-bottom: 35px;
@@ -463,6 +668,44 @@ button {
 
   .team__title {
     font-size: 30px;
+  }
+
+  .feedback__inner {
+    grid-template-columns: 260px auto;
+  }
+
+  .feedback__slider {
+    width: 660px;
+  }
+
+  .certificates__slider {
+    width: 840px;
+  }
+
+  .certificates__slider img {
+    width: 280px;
+  }
+
+  .promo__link {
+    min-width: 135px;
+    text-align: center;
+  }
+
+  .promo__text {
+    padding-left: 0;
+  }
+
+  .contacts__img {
+    width: 335px;
+  }
+
+  .form {
+    width: 592px;
+    padding: 75px 9px;
+  }
+
+  .form__btn {
+    margin-top: 25px;
   }
 }
 
@@ -690,6 +933,89 @@ button {
   .team__item-descr {
     font-size: 6px;
   }
+
+  .feedback__content {
+    padding-bottom: 94px;
+  }
+
+  .feedback__slider {
+    width: 430px;
+  }
+
+  .feedback__item-img {
+    width: 200px;
+  }
+
+  .feedback__item-videobtn img {
+    width: 50px;
+  }
+
+  .feedback__item-content {
+    padding-bottom: 40px;
+  }
+
+  .feedback__item-sociallink {
+    margin-bottom: 10px;
+  }
+
+  .feedback__item-sociallink img {
+    width: 15px;
+  }
+
+  .feedback__item-name {
+    font-size: 12px;
+    margin-bottom: 10px;
+  }
+
+  .certificates__slider {
+    width: 600px;
+  }
+
+  .feedback__item-text {
+    font-size: 10px;
+  }
+
+  .feedback__item-btn {
+    font-size: 8px;
+  }
+
+  .certificates__slider img {
+    width: 200px;
+  }
+
+  .accordion__title {
+    font-size: 12px;
+  }
+
+  .accordion__text {
+    font-size: 10px;
+  }
+
+  .promo__text {
+    font-size: 15px;
+  }
+
+  .promo__link {
+    font-size: 12px;
+  }
+
+  .contacts__img {
+    width: 187px;
+  }
+
+  .form {
+    width: 440px;
+    padding: 30px 18px 30px 22px;
+  }
+
+  .form__title {
+    font-size: 15px;
+    margin-bottom: 20px;
+  }
+
+  .form__btn {
+    margin-top: 15px;
+  }
 }
 
 @media (max-width: 640px) {
@@ -848,6 +1174,35 @@ button {
 
   .team__item-box {
     right: 10px;
+  }
+
+  .certificates__descr {
+    padding-bottom: 0;
+  }
+
+  .certificates__content .swiper-pagination {
+    text-align: center;
+  }
+
+  .certificates__slider {
+    width: 425px;
+    margin: 0 auto;
+  }
+
+  .promo {
+    padding: 42px 0;
+  }
+
+  .promo__text {
+    margin-right: 85px;
+  }
+
+  .contacts {
+    padding-top: 50px;
+  }
+
+  .contacts__img {
+    display: none;
   }
 }
 
@@ -1028,5 +1383,78 @@ button {
     padding: 19px 19px 18px 10px;
     bottom: -6px;
     right: -8px;
+  }
+
+  .feedback__content {
+    padding-bottom: 84px;
+  }
+
+  .feedback__slider {
+    width: 250px;
+    margin: 0 auto;
+  }
+
+  .feedback__item {
+    grid-template-columns: auto;
+    gap: 12px 0;
+  }
+
+  .feedback__item-video {
+    text-align: center;
+  }
+
+  .feedback__item-img {
+    width: 250px;
+  }
+  .feedback__item-content {
+    text-align: center;
+  }
+
+  feedback__content .swiper-pagination {
+    bottom: 50px;
+  }
+
+  .feedback__item-btn {
+    max-width: 136px;
+    margin: 0 auto;
+    left: 0;
+  }
+
+  .certificates__descr {
+    padding-bottom: 5px;
+  }
+
+  .certificates__slider {
+    width: 200px;
+  }
+
+  .section--decor {
+    padding-bottom: 70px;
+  }
+
+  .certificates__content .swiper-pagination {
+    bottom: 46px;
+  }
+
+  .accordion__title {
+    font-size: 10px;
+  }
+
+  .accordion__text {
+    font-size: 8px;
+  }
+
+  .promo__text {
+    margin-right: 50px;
+  }
+
+  .promo__link {
+    font-size: 8px;
+    min-width: 95px;
+  }
+
+  .form__btn {
+    font-size: 8px;
+    padding: 15px 13px;
   }
 }
